# Aircraft_Detect

./: .gitignore  README.md  data.yaml  inference.ipynb  pull.ipynb  requirements.txt  train.ipynb  train_yolov11.ipynb  upload_to_huggingface.ipynb
AeroTrack/: CMakeLists.txt  detector.cpp  detector.h  main.cpp  tracker.cpp  tracker.h
